--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "gatsby-source-filesystem": "^4.20.0",
     "gatsby-source-graphql": "^4.19.0",
     "gatsby-transformer-sharp": "^4.20.0",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
