--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "react-owl-carousel": "^2.3.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.5"
