--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-source-filesystem": "^4.20.0",
     "gatsby-source-graphql": "^4.19.0",
     "gatsby-transformer-sharp": "^4.20.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
