--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "font-awesome": "^4.7.0",
     "gatsby": "^4.19.2",
     "gatsby-plugin-image": "^2.20.0",
+    "gatsby-plugin-react-helmet": "^5.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
     "gatsby-source-filesystem": "^4.20.0",
     "gatsby-source-graphql": "^4.19.0",
@@ -27,6 +28,7 @@
     "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-owl-carousel": "^2.3.3",
     "react-slick": "^0.29.0",
