--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-react-helmet": "^5.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
+    "gatsby-plugin-snipcart": "^1.1.2",
     "gatsby-source-filesystem": "^4.20.0",
     "gatsby-source-graphql": "^4.19.0",
     "gatsby-transformer-sharp": "^4.20.0",
@@ -32,6 +33,7 @@
     "react-icons": "^4.4.0",
     "react-owl-carousel": "^2.3.3",
     "react-slick": "^0.29.0",
+    "react-use-cart": "^1.13.0",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.5"
   },
