--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@pasdo501/gatsby-source-woocommerce": "^0.15.1",
+    "axios": "^0.18.1",
     "bootstrap": "^3.4.1",
     "font-awesome": "^4.7.0",
     "gatsby": "^4.19.2",
