--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "gatsby-source-filesystem": "^4.20.0",
     "gatsby-source-graphql": "^4.19.0",
     "gatsby-transformer-sharp": "^4.20.0",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.1.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
@@ -36,7 +38,8 @@
     "react-slick": "^0.29.0",
     "react-use-cart": "^1.13.0",
     "slick-carousel": "^1.8.1",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
